[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0.64"
reqwest = "0.9.18"
dotenv = "0.14.1"
tokio = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.0"